--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -31,6 +31,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 html{
@@ -193,6 +194,13 @@ body{
     font-weight: 900;
 }
 
+.product__item__btns{
+    margin-top: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .product__handler{
     display: flex;
     justify-content: space-evenly;
@@ -260,7 +268,7 @@ body{
 main{
     margin-top: 80px;
     padding: 16px;
-    color: white;
+    color: var(--Headline);
 }
 
 .hero{
@@ -271,6 +279,10 @@ main{
 }
 
 .hero__titles{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     padding: 10px;
     width: 90%;
     text-align: center;
@@ -279,13 +291,18 @@ main{
 
 .hero__titles p{
     margin: 10px auto;
-    text-align: start;
+    text-align: center;
     width: 80%;
     font-size: 1.2rem;
+    color: var(--Paragraph);
 }
 
 .hero__titles h1{
     font-size: 2.2rem;
+}
+
+.hero__titles span{
+    color: var(--Headline);
 }
 
 .hero__carousel{
@@ -371,7 +388,8 @@ main{
 .sale__card__img{
     width: 100%;
     height: 120px;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .sale-card__content{
@@ -476,7 +494,18 @@ main{
 .discover__card__img{
     height: 100px;
     width: 200px;
-    border-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.discover__card__middle{
+    padding: 16px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.6rem;
+    font-family: var(--Font-Roboto);
 }
 
 .discover__card__bottom{
@@ -485,8 +514,24 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-family: var(--Font-Roboto);
+}
+
+.discover__card--new{
+    color: var(--Pink);
+}
+
+.discover__card--classic{
+    color: var(--Paragraph);
+}
+
+.discover__card--sale{
+    color: var(--Green);
+}
+
+.discover__card--popular{
+    color: var(--Highlight);
 }
 
 /* Footer */
