--- a/assets/style/mediaqueries.css
+++ b/assets/style/mediaqueries.css
@@ -51,6 +51,10 @@
         flex-direction: row;
     }
 
+    .product__item__info, .product__item__btns{
+        width: 50%;
+    }
+
     .product__item__img{
         width: 140px;
     }
