--- a/assets/style/wishlist.css
+++ b/assets/style/wishlist.css
@@ -44,6 +44,21 @@
     gap: 20px;
 }
 
+.empty-list{
+    margin-top: 70px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: 700;
+    font-family: var(--Font-Roboto);
+    animation: fade 0.5s;
+}
+
+.show{
+    display: flex;
+}
+
 .wish-game{
     width: 100%;
     display: flex;
@@ -76,3 +91,19 @@
     text-decoration: none;
     color: var(--Headline);
 }
+
+.btn--deleteAllWishGames{
+    display: block;
+    font-family: var(--Font-Roboto);
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    margin: 30px auto;
+    width: 30%;
+    visibility: hidden;
+}
+
+.show{
+    visibility: visible;
+}
+
