--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -217,7 +217,7 @@ body{
 .empty-cart-text{
     margin-top: 50px;
     color: var(--Headline);
-    font-size: 2rem;
+    font-size: 1.1rem;
     font-family: var(--Font-Roboto);
     font-weight: 700;
     display: none;
@@ -721,12 +721,11 @@ footer{
     position: fixed;
     top: 80px;
     left: 0;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
-    z-index: 1; /*Para que quede por encima del resto de las cosas*/
-  
-    /*Efecto de Glassmorphismo*/
-    background: rgba(255, 255, 255, 0.05);
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.01);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
+    transition: all 0.2s;
   }
