--- a/assets/style/wishlist.css
+++ b/assets/style/wishlist.css
@@ -99,7 +99,7 @@
     text-transform: uppercase;
     font-size: 1.6rem;
     margin: 30px auto;
-    width: 30%;
+    width: 300px;
     visibility: hidden;
 }
 
