hero carousel animation - bubble cart

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -83,9 +83,29 @@ body{
 }
 
 #toggle-menu, #toggle-cart{
+    position: relative;
     font-size: 2rem;
     color: var(--Headline);
     cursor: pointer;
+}
+
+.toggle-cart-container{
+    position: relative;
+}
+
+.cart-bubble{
+    position: absolute;
+    left: -4px;
+    top: 14px;
+    width: 16px;
+    height: 16px;
+    text-align: center;
+    color: var(--Headline);
+    font-family: var(--Font-Roboto);
+    font-size: 14px;
+    background-color: var(--Pink);
+    border-radius: 50%;
+    font-weight: 700;
 }
 
 .navbar{
@@ -408,13 +428,21 @@ main{
 
 .hero__carousel__controls{
     position: relative;
-}
-
-.hero__carousel__img{
-    height: 100%;
-    width: 100%;
     border: 2px solid var(--Highlight);
     border-radius: 20px;
+}
+
+
+.hero__carousel__img{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border-radius: 18px;
+    z-index: 1;
+}
+
+.hero__carousel__img--fade{
+    animation: 0.5s fade;
 }
 
 #hero__carousel--arrow-left{
@@ -427,6 +455,7 @@ main{
     cursor: pointer;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    z-index: 2;
 }
 
 #hero__carousel--arrow-right{
@@ -439,6 +468,8 @@ main{
     cursor: pointer;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    z-index: 2;
+    
 }
 
 /* Sale */
@@ -723,7 +754,7 @@ footer{
     left: 0;
     min-height: 100vh;
     width: 100%;
-    z-index: 1;
+    z-index: 10;
     background: rgba(255, 255, 255, 0.01);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
